--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ h1 {
 	font-weight: bold;
 	text-align: center;
 	color: white;
-	text-transform: capitalize;
+	text-transform: uppercase;
 }
 
 h2 {
